--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,30 +9,31 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
+      background: linear-gradient(to right, #06954E, #064D95);
     }
 
-    /* Top border gradient */
     .border-wrapper {
+      padding: 5px 15px 15px;
       background: linear-gradient(to right, #06954E, #064D95);
-      padding: 20px 0 0;
       border-top-left-radius: 25px;
       border-top-right-radius: 25px;
     }
 
-    .border-inner {
-      max-width: 900px;
-      margin: auto;
-      padding: 0 15px;
+    .inner-container {
+      background-color: white;
+      border-radius: 25px;
+      overflow: hidden;
     }
 
     .logo {
       display: block;
-      margin: 0 auto 10px;
+      margin: 20px auto 0;
       width: 125px;
     }
 
     .page-title {
       text-align: center;
+      margin-top: 10px;
     }
 
     .page-title h1 {
@@ -41,7 +42,7 @@
       font-weight: 700;
       color: white;
       text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
-      margin: 10px 0 10px;
+      margin: 10px 0 5px;
     }
 
     .find-type-btn {
@@ -65,17 +66,17 @@
       transform: scale(1.05);
     }
 
-    .blue-btn a { background-color: #064D95; }
-    .green-btn a { background-color: #06954E; }
     .red-btn a { background-color: #950606; }
+    .green-btn a { background-color: #06954E; }
+    .blue-btn a { background-color: #064D95; }
 
     .room-section {
       padding: 40px 20px;
     }
 
-    .blue-room { background-color: #064D95; }
-    .green-room { background-color: #06954E; }
     .red-room { background-color: #950606; }
+    .green-room { background-color: #06954E; }
+    .blue-room { background-color: #064D95; }
 
     .archetype-card {
       margin: 40px auto;
@@ -84,12 +85,14 @@
     }
 
     .image-container {
-      border: 4px solid #BEA066;
+      border: 4px solid #FFD700;
       border-radius: 12px;
       overflow: hidden;
       display: inline-block;
       width: 100%;
       margin-bottom: 16px;
+      user-select: none;
+      -webkit-user-drag: none;
     }
 
     .image-pair {
@@ -102,16 +105,11 @@
       object-fit: cover;
       display: block;
       pointer-events: none;
-      user-select: none;
-    }
-
-    .image-pair img[draggable] {
-      -webkit-user-drag: none;
     }
 
     .divider {
       width: 4px;
-      background-color: #BEA066;
+      background-color: #FFD700;
     }
 
     .slogan {
@@ -127,7 +125,7 @@
     }
 
     h3 a {
-      color: #BEA066;
+      color: #FFD700;
       text-decoration: none;
       font-size: 1.4rem;
     }
@@ -135,219 +133,227 @@
     h3 a:hover {
       text-decoration: underline;
     }
+
+    .clickable-images img {
+      pointer-events: auto;
+    }
+
+    .clickable-images a {
+      display: inline-block;
+    }
   </style>
 </head>
 <body>
-
 <div class="border-wrapper">
-  <div class="border-inner">
+  <div class="inner-container">
+
     <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-    <div class="page-title">
-      <h1>Sexual Profiles</h1>
+
+    <!-- RED ROOM -->
+    <div class="red-room room-section">
+      <div class="page-title">
+        <h1>Sexual Profiles</h1>
+      </div>
+      <div class="find-type-btn red-btn">
+        <a href="index.html">Find Your Type</a>
+      </div>
+
+      <!-- Claimed & Trained -->
+      <div class="archetype-card clickable-images">
+        <a href="claimed-and-trained.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/claimed__trained_female.jpg">
+              <div class="divider"></div>
+              <img src="images/claimed__trained_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
+        <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
+      </div>
+
+      <!-- The Punish Me -->
+      <div class="archetype-card clickable-images">
+        <a href="the-punish-me.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_punish_me_female.jpg">
+              <div class="divider"></div>
+              <img src="images/the_punish_me_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+        <p class="slogan">What you call defiance, I call foreplay.</p>
+      </div>
+
+      <!-- The Provoker -->
+      <div class="archetype-card clickable-images">
+        <a href="the-provoker.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/the_provoker_female.jpg">
+              <div class="divider"></div>
+              <img src="images/the_provoker_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="the-provoker.html">The Provoker</a></h3>
+        <p class="slogan">You press buttons—on purpose.</p>
+      </div>
+
+      <!-- Dungeon Master -->
+      <div class="archetype-card clickable-images">
+        <a href="dungeon-master.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/dungeon_master_female.jpg">
+              <div class="divider"></div>
+              <img src="images/dungeon_master_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+        <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+      </div>
     </div>
-    <div class="find-type-btn red-btn">
-      <a href="index.html">Find Your Type</a>
+
+    <!-- GREEN ROOM -->
+    <div class="green-room room-section">
+      <div class="find-type-btn green-btn">
+        <a href="index.html">Find Your Type</a>
+      </div>
+
+      <!-- Generous Giver -->
+      <div class="archetype-card clickable-images">
+        <a href="generous-giver.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/generous_giver_female.jpg">
+              <div class="divider"></div>
+              <img src="images/generous_giver_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="generous-giver.html">Generous Giver</a></h3>
+        <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+      </div>
+
+      <!-- Bedroom Adventurer -->
+      <div class="archetype-card clickable-images">
+        <a href="bedroom-adventurer.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/bedroom_adventurer_female.jpg">
+              <div class="divider"></div>
+              <img src="images/bedroom_adventurer_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+        <p class="slogan">I'm up for anything and down to get dirty.</p>
+      </div>
+
+      <!-- Promiscuous Plaything -->
+      <div class="archetype-card clickable-images">
+        <a href="promiscuous-plaything.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/promiscuous_plaything_female.jpg">
+              <div class="divider"></div>
+              <img src="images/promiscuous_plaything_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
+        <p class="slogan">Are you ready for a wild ride!</p>
+      </div>
+
+      <!-- Charmer in Charge -->
+      <div class="archetype-card clickable-images">
+        <a href="charmer-in-charge.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/charmer_in_charge_female.jpg">
+              <div class="divider"></div>
+              <img src="images/charmer_in_charge_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+        <p class="slogan">You don’t just take control. You make them beg for it.</p>
+      </div>
     </div>
+
+    <!-- BLUE ROOM -->
+    <div class="blue-room room-section">
+      <div class="find-type-btn blue-btn">
+        <a href="index.html">Find Your Type</a>
+      </div>
+
+      <!-- Devoted Darling -->
+      <div class="archetype-card clickable-images">
+        <a href="devoted-darling.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/devoted_darling_female.jpg">
+              <div class="divider"></div>
+              <img src="images/devoted_darling_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+        <p class="slogan">Nothing is as kinky as loyalty.</p>
+      </div>
+
+      <!-- Tender Protector -->
+      <div class="archetype-card clickable-images">
+        <a href="tender-protector.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/tender_protector_female.jpg">
+              <div class="divider"></div>
+              <img src="images/tender_protector_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="tender-protector.html">Tender Protector</a></h3>
+        <p class="slogan">You lead with gravity, not volume.</p>
+      </div>
+
+      <!-- Mood Multiplier -->
+      <div class="archetype-card clickable-images">
+        <a href="mood-multiplier.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/mood_multiplier_female.jpg">
+              <div class="divider"></div>
+              <img src="images/mood_multiplier_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+        <p class="slogan">You match their vibe—and raise it.</p>
+      </div>
+
+      <!-- Heatwave -->
+      <div class="archetype-card clickable-images">
+        <a href="heatwave.html">
+          <div class="image-container">
+            <div class="image-pair">
+              <img src="images/heatwave_female.jpg">
+              <div class="divider"></div>
+              <img src="images/heatwave_male.jpg">
+            </div>
+          </div>
+        </a>
+        <h3><a href="heatwave.html">Heatwave</a></h3>
+        <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
+      </div>
+    </div>
+
   </div>
 </div>
-
-<!-- RED ROOM -->
-<div class="red-room room-section">
-
-  <!-- Claimed & Trained -->
-  <div class="archetype-card">
-    <a href="claimed-and-trained.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/claimed__trained_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/claimed__trained_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
-    <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
-  </div>
-
-  <!-- The Punish Me -->
-  <div class="archetype-card">
-    <a href="the-punish-me.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/the_punish_me_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/the_punish_me_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-    <p class="slogan">What you call defiance, I call foreplay.</p>
-  </div>
-
-  <!-- The Provoker -->
-  <div class="archetype-card">
-    <a href="the-provoker.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/the_provoker_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/the_provoker_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="the-provoker.html">The Provoker</a></h3>
-    <p class="slogan">You press buttons—on purpose.</p>
-  </div>
-
-  <!-- Dungeon Master -->
-  <div class="archetype-card">
-    <a href="dungeon-master.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/dungeon_master_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/dungeon_master_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-    <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
-  </div>
-</div>
-
-<!-- GREEN ROOM -->
-<div class="green-room room-section">
-  <div class="find-type-btn green-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- Generous Giver -->
-  <div class="archetype-card">
-    <a href="generous-giver.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/generous_giver_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/generous_giver_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="generous-giver.html">Generous Giver</a></h3>
-    <p class="slogan">You have so much to give, you just need someone to give it to.</p>
-  </div>
-
-  <!-- Bedroom Adventurer -->
-  <div class="archetype-card">
-    <a href="bedroom-adventurer.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/bedroom_adventurer_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/bedroom_adventurer_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-    <p class="slogan">I'm up for anything and down to get dirty.</p>
-  </div>
-
-  <!-- Promiscuous Plaything -->
-  <div class="archetype-card">
-    <a href="promiscuous-plaything.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/promiscuous_plaything_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/promiscuous_plaything_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
-    <p class="slogan">Are you ready for a wild ride!</p>
-  </div>
-
-  <!-- Charmer in Charge -->
-  <div class="archetype-card">
-    <a href="charmer-in-charge.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/charmer_in_charge_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/charmer_in_charge_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-    <p class="slogan">You don’t just take control. You make them beg for it.</p>
-  </div>
-</div>
-
-<!-- BLUE ROOM -->
-<div class="blue-room room-section">
-  <div class="find-type-btn blue-btn">
-    <a href="index.html">Find Your Type</a>
-  </div>
-
-  <!-- Devoted Darling -->
-  <div class="archetype-card">
-    <a href="devoted-darling.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/devoted_darling_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/devoted_darling_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-    <p class="slogan">Nothing is as kinky as loyalty.</p>
-  </div>
-
-  <!-- Tender Protector -->
-  <div class="archetype-card">
-    <a href="tender-protector.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/tender_protector_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/tender_protector_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="tender-protector.html">Tender Protector</a></h3>
-    <p class="slogan">You lead with gravity, not volume.</p>
-  </div>
-
-  <!-- Mood Multiplier -->
-  <div class="archetype-card">
-    <a href="mood-multiplier.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/mood_multiplier_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/mood_multiplier_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-    <p class="slogan">You match their vibe—and raise it.</p>
-  </div>
-
-  <!-- Heatwave -->
-  <div class="archetype-card">
-    <a href="heatwave.html">
-      <div class="image-container">
-        <div class="image-pair">
-          <img src="images/heatwave_female.jpg" draggable="false" oncontextmenu="return false;">
-          <div class="divider"></div>
-          <img src="images/heatwave_male.jpg" draggable="false" oncontextmenu="return false;">
-        </div>
-      </div>
-    </a>
-    <h3><a href="heatwave.html">Heatwave</a></h3>
-    <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
-  </div>
-</div>
-
 </body>
 </html>
