--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -4,50 +4,73 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Sexual Profiles</title>
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@1,700&family=Poppins:ital,wght@1,700&display=swap" rel="stylesheet">
   <style>
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background: linear-gradient(to right, #06954E, #064D95);
     }
 
     .border-wrapper {
       padding: 5px 15px 15px;
-      background: linear-gradient(to right, #06954E, #064D95);
-      border-top-left-radius: 25px;
-      border-top-right-radius: 25px;
+      background: linear-gradient(to right, #06954E, #064D95); /* red room default */
     }
 
-    .inner-container {
-      background-color: white;
+    .green-room .border-wrapper {
+      background: linear-gradient(to right, #950606, #064D95);
+    }
+
+    .blue-room .border-wrapper {
+      background: linear-gradient(to right, #950606, #06954E);
+    }
+
+    .container {
+      padding: 20px;
       border-radius: 25px;
-      overflow: hidden;
+      max-width: 700px;
+      margin: auto;
     }
 
-    .logo {
+    .red-room .container {
+      background-color: #950606;
+    }
+
+    .green-room .container {
+      background-color: #06954E;
+    }
+
+    .blue-room .container {
+      background-color: #064D95;
+    }
+
+    .logo-img {
       display: block;
-      margin: 20px auto 0;
-      width: 125px;
+      margin: 0 auto;
+      max-width: 125px;
+      height: auto;
+      padding-top: 20px;
+      padding-bottom: 10px;
     }
 
     .page-title {
       text-align: center;
-      margin-top: 10px;
+      padding-top: 10px;
     }
 
     .page-title h1 {
       font-size: 2.6rem;
       font-style: italic;
-      font-weight: 700;
+      font-family: 'Poppins', sans-serif;
       color: white;
+      text-align: center;
       text-shadow: 0 0 8px #ff00ff, 0 0 12px #ff00ff;
-      margin: 10px 0 5px;
+      line-height: 1.1;
+      margin-bottom: 10px;
     }
 
     .find-type-btn {
       text-align: center;
-      margin: 20px 0 40px;
+      margin: 30px 0;
     }
 
     .find-type-btn a {
@@ -66,50 +89,41 @@
       transform: scale(1.05);
     }
 
-    .red-btn a { background-color: #950606; }
-    .green-btn a { background-color: #06954E; }
     .blue-btn a { background-color: #064D95; }
-
-    .room-section {
-      padding: 40px 20px;
-    }
-
-    .red-room { background-color: #950606; }
-    .green-room { background-color: #06954E; }
-    .blue-room { background-color: #064D95; }
+    .green-btn a { background-color: #06954E; }
+    .red-btn a { background-color: #950606; }
 
     .archetype-card {
       margin: 40px auto;
       text-align: center;
-      max-width: 700px;
     }
 
     .image-container {
-      border: 4px solid #FFD700;
+      border: 4px solid gold;
       border-radius: 12px;
       overflow: hidden;
       display: inline-block;
       width: 100%;
       margin-bottom: 16px;
-      user-select: none;
-      -webkit-user-drag: none;
     }
 
     .image-pair {
       display: flex;
-      height: auto;
+      height: 240px;
+      position: relative;
     }
 
     .image-pair img {
       width: 50%;
+      height: 100%;
       object-fit: cover;
       display: block;
-      pointer-events: none;
     }
 
     .divider {
       width: 4px;
-      background-color: #FFD700;
+      background-color: gold;
+      height: 100%;
     }
 
     .slogan {
@@ -125,7 +139,7 @@
     }
 
     h3 a {
-      color: #FFD700;
+      color: gold;
       text-decoration: none;
       font-size: 1.4rem;
     }
@@ -133,24 +147,19 @@
     h3 a:hover {
       text-decoration: underline;
     }
-
-    .clickable-images img {
-      pointer-events: auto;
-    }
-
-    .clickable-images a {
-      display: inline-block;
-    }
   </style>
 </head>
 <body>
+
+<!-- TOP GRADIENT & LOGO -->
 <div class="border-wrapper">
-  <div class="inner-container">
+  <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo-img" />
+</div>
 
-    <img src="golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
-
-    <!-- RED ROOM -->
-    <div class="red-room room-section">
+<!-- RED ROOM -->
+<div class="red-room">
+  <div class="border-wrapper">
+    <div class="container">
       <div class="page-title">
         <h1>Sexual Profiles</h1>
       </div>
@@ -158,202 +167,174 @@
         <a href="index.html">Find Your Type</a>
       </div>
 
-      <!-- Claimed & Trained -->
-      <div class="archetype-card clickable-images">
-        <a href="claimed-and-trained.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/claimed__trained_female.jpg">
-              <div class="divider"></div>
-              <img src="images/claimed__trained_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/dungeon_master_female.jpg" alt="Dungeon Master - Female">
+            <div class="divider"></div>
+            <img src="images/dungeon_master_male.jpg" alt="Dungeon Master - Male">
           </div>
-        </a>
+        </div>
+        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
+        <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/claimed__trained_female.jpg" alt="Claimed & Trained - Female">
+            <div class="divider"></div>
+            <img src="images/claimed__trained_male.jpg" alt="Claimed & Trained - Male">
+          </div>
+        </div>
         <h3><a href="claimed-and-trained.html">Claimed & Trained</a></h3>
         <p class="slogan">The deeper you give in the more pleasure you'll feel.</p>
       </div>
 
-      <!-- The Punish Me -->
-      <div class="archetype-card clickable-images">
-        <a href="the-punish-me.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/the_punish_me_female.jpg">
-              <div class="divider"></div>
-              <img src="images/the_punish_me_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_provoker_female.jpg" alt="The Provoker - Female">
+            <div class="divider"></div>
+            <img src="images/the_provoker_male.jpg" alt="The Provoker - Male">
           </div>
-        </a>
-        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
-        <p class="slogan">What you call defiance, I call foreplay.</p>
-      </div>
-
-      <!-- The Provoker -->
-      <div class="archetype-card clickable-images">
-        <a href="the-provoker.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/the_provoker_female.jpg">
-              <div class="divider"></div>
-              <img src="images/the_provoker_male.jpg">
-            </div>
-          </div>
-        </a>
+        </div>
         <h3><a href="the-provoker.html">The Provoker</a></h3>
         <p class="slogan">You press buttons—on purpose.</p>
       </div>
 
-      <!-- Dungeon Master -->
-      <div class="archetype-card clickable-images">
-        <a href="dungeon-master.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/dungeon_master_female.jpg">
-              <div class="divider"></div>
-              <img src="images/dungeon_master_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/the_punish_me_female.jpg" alt="The Punish Me - Female">
+            <div class="divider"></div>
+            <img src="images/the_punish_me_male.jpg" alt="The Punish Me - Male">
           </div>
-        </a>
-        <h3><a href="dungeon-master.html">Dungeon Master</a></h3>
-        <p class="slogan">You’re not just having a fantasy. You’re the one in charge of it.</p>
+        </div>
+        <h3><a href="the-punish-me.html">The Punish Me</a></h3>
+        <p class="slogan">What you call defiance, I call foreplay.</p>
       </div>
     </div>
+  </div>
+</div>
 
-    <!-- GREEN ROOM -->
-    <div class="green-room room-section">
+<!-- GREEN ROOM -->
+<div class="green-room">
+  <div class="border-wrapper">
+    <div class="container">
       <div class="find-type-btn green-btn">
         <a href="index.html">Find Your Type</a>
       </div>
 
-      <!-- Generous Giver -->
-      <div class="archetype-card clickable-images">
-        <a href="generous-giver.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/generous_giver_female.jpg">
-              <div class="divider"></div>
-              <img src="images/generous_giver_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/charmer_in_charge_female.jpg" alt="Charmer in Charge - Female">
+            <div class="divider"></div>
+            <img src="images/charmer_in_charge_male.jpg" alt="Charmer in Charge - Male">
           </div>
-        </a>
-        <h3><a href="generous-giver.html">Generous Giver</a></h3>
-        <p class="slogan">You have so much to give, you just need someone to give it to.</p>
+        </div>
+        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
+        <p class="slogan">You don’t just take control. You make them beg for it.</p>
       </div>
 
-      <!-- Bedroom Adventurer -->
-      <div class="archetype-card clickable-images">
-        <a href="bedroom-adventurer.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/bedroom_adventurer_female.jpg">
-              <div class="divider"></div>
-              <img src="images/bedroom_adventurer_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/promiscuous_plaything_female.jpg" alt="Promiscuous Plaything - Female">
+            <div class="divider"></div>
+            <img src="images/promiscuous_plaything_male.jpg" alt="Promiscuous Plaything - Male">
           </div>
-        </a>
-        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
-        <p class="slogan">I'm up for anything and down to get dirty.</p>
-      </div>
-
-      <!-- Promiscuous Plaything -->
-      <div class="archetype-card clickable-images">
-        <a href="promiscuous-plaything.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/promiscuous_plaything_female.jpg">
-              <div class="divider"></div>
-              <img src="images/promiscuous_plaything_male.jpg">
-            </div>
-          </div>
-        </a>
+        </div>
         <h3><a href="promiscuous-plaything.html">Promiscuous Plaything</a></h3>
         <p class="slogan">Are you ready for a wild ride!</p>
       </div>
 
-      <!-- Charmer in Charge -->
-      <div class="archetype-card clickable-images">
-        <a href="charmer-in-charge.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/charmer_in_charge_female.jpg">
-              <div class="divider"></div>
-              <img src="images/charmer_in_charge_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/bedroom_adventurer_female.jpg" alt="Bedroom Adventurer - Female">
+            <div class="divider"></div>
+            <img src="images/bedroom_adventurer_male.jpg" alt="Bedroom Adventurer - Male">
           </div>
-        </a>
-        <h3><a href="charmer-in-charge.html">Charmer in Charge</a></h3>
-        <p class="slogan">You don’t just take control. You make them beg for it.</p>
+        </div>
+        <h3><a href="bedroom-adventurer.html">Bedroom Adventurer</a></h3>
+        <p class="slogan">I'm up for anything and down to get down and dirty.</p>
+      </div>
+
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/generous_giver_female.jpg" alt="Generous Giver - Female">
+            <div class="divider"></div>
+            <img src="images/generous_giver_male.jpg" alt="Generous Giver - Male">
+          </div>
+        </div>
+        <h3><a href="generous-giver.html">Generous Giver</a></h3>
+        <p class="slogan">You have so much to give, you just need someone to give it to.</p>
       </div>
     </div>
+  </div>
+</div>
 
-    <!-- BLUE ROOM -->
-    <div class="blue-room room-section">
+<!-- BLUE ROOM -->
+<div class="blue-room">
+  <div class="border-wrapper">
+    <div class="container">
       <div class="find-type-btn blue-btn">
         <a href="index.html">Find Your Type</a>
       </div>
 
-      <!-- Devoted Darling -->
-      <div class="archetype-card clickable-images">
-        <a href="devoted-darling.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/devoted_darling_female.jpg">
-              <div class="divider"></div>
-              <img src="images/devoted_darling_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/tender_protector_female.jpg" alt="Tender Protector - Female">
+            <div class="divider"></div>
+            <img src="images/tender_protector_male.jpg" alt="Tender Protector - Male">
           </div>
-        </a>
-        <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
-        <p class="slogan">Nothing is as kinky as loyalty.</p>
-      </div>
-
-      <!-- Tender Protector -->
-      <div class="archetype-card clickable-images">
-        <a href="tender-protector.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/tender_protector_female.jpg">
-              <div class="divider"></div>
-              <img src="images/tender_protector_male.jpg">
-            </div>
-          </div>
-        </a>
+        </div>
         <h3><a href="tender-protector.html">Tender Protector</a></h3>
         <p class="slogan">You lead with gravity, not volume.</p>
       </div>
 
-      <!-- Mood Multiplier -->
-      <div class="archetype-card clickable-images">
-        <a href="mood-multiplier.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/mood_multiplier_female.jpg">
-              <div class="divider"></div>
-              <img src="images/mood_multiplier_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/devoted_darling_female.jpg" alt="Devoted Darling - Female">
+            <div class="divider"></div>
+            <img src="images/devoted_darling_male.jpg" alt="Devoted Darling - Male">
           </div>
-        </a>
-        <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
-        <p class="slogan">You match their vibe—and raise it.</p>
+        </div>
+        <h3><a href="devoted-darling.html">Devoted Darling</a></h3>
+        <p class="slogan">Nothing is as kinky as loyalty.</p>
       </div>
 
-      <!-- Heatwave -->
-      <div class="archetype-card clickable-images">
-        <a href="heatwave.html">
-          <div class="image-container">
-            <div class="image-pair">
-              <img src="images/heatwave_female.jpg">
-              <div class="divider"></div>
-              <img src="images/heatwave_male.jpg">
-            </div>
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/heatwave_female.jpg" alt="Heatwave - Female">
+            <div class="divider"></div>
+            <img src="images/heatwave_male.jpg" alt="Heatwave - Male">
           </div>
-        </a>
+        </div>
         <h3><a href="heatwave.html">Heatwave</a></h3>
         <p class="slogan">There's no need to change who you are, because people will adjust to you.</p>
       </div>
-    </div>
 
+      <div class="archetype-card">
+        <div class="image-container">
+          <div class="image-pair">
+            <img src="images/mood_multiplier_female.jpg" alt="Mood Multiplier - Female">
+            <div class="divider"></div>
+            <img src="images/mood_multiplier_male.jpg" alt="Mood Multiplier - Male">
+          </div>
+        </div>
+        <h3><a href="mood-multiplier.html">Mood Multiplier</a></h3>
+        <p class="slogan">You match their vibe—and raise it.</p>
+      </div>
+    </div>
   </div>
 </div>
+
 </body>
 </html>
