--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -17,7 +17,7 @@
     }
 
     .green-room .border-wrapper {
-      background: linear-gradient(to right, #950606, #064D95);
+      background: linear-gradient(to right, #064D95, #950606);
     }
 
     .blue-room .border-wrapper {
