--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -12,7 +12,7 @@
     }
 
     .border-wrapper {
-      padding: 5px 15px 15px;
+      padding: 5px 15px 0px;
       background: linear-gradient(to right, #06954E, #064D95); /* red room default */
     }
 
@@ -28,7 +28,7 @@
       padding: 20px;
       border-radius: 25px;
       max-width: 700px;
-      margin: auto;
+      margin: auto;0
     }
 
     .red-room .container {
